--- a/NESCAFE/cube_02.html
+++ b/NESCAFE/cube_02.html
@@ -1028,7 +1028,7 @@ var el = document.getElementById('i91');
 
 el.addEventListener('click', function(e){
     /*#i444.i445.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', ' https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/?utm_source=mosaic&utm_campaign=reciclaje_marzo&utm_medium=native&utm_term=cpm'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', ' https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1045,7 +1045,7 @@ var el = document.getElementById('i382');
 
 el.addEventListener('click', function(e){
     /*#i450.i451.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://www.facebook.com/sharer/sharer.php?u= https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/?utm_source=mosaic&utm_campaign=reciclaje_marzo&utm_medium=native&utm_term=cpm', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://www.facebook.com/sharer/sharer.php?u=https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje/', '_blank'));
 /*#/#*/
 });
 
@@ -1062,7 +1062,7 @@ var el = document.getElementById('i384');
 
 el.addEventListener('click', function(e){
     /*#i448.i449.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text= https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/?utm_source=mosaic&utm_campaign=reciclaje_marzo&utm_medium=native&utm_term=cpm'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1079,7 +1079,7 @@ var el = document.getElementById('i386');
 
 el.addEventListener('click', function(e){
     /*#i446.i447.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://twitter.com/home?status= https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/?utm_source=mosaic&utm_campaign=reciclaje_marzo&utm_medium=native&utm_term=cpm'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://twitter.com/home?status= https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1107,7 +1107,7 @@ var el = document.getElementById('i95');
 
 el.addEventListener('click', function(e){
     /*#i458.i459.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', ' https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/?utm_source=mosaic&utm_campaign=reciclaje_marzo&utm_medium=native&utm_term=cpm'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', ' https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1124,7 +1124,7 @@ var el = document.getElementById('i400');
 
 el.addEventListener('click', function(e){
     /*#i456.i457.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://www.facebook.com/sharer/sharer.php?u= https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/?utm_source=mosaic&utm_campaign=reciclaje_marzo&utm_medium=native&utm_term=cpm'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://www.facebook.com/sharer/sharer.php?u=https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1141,7 +1141,7 @@ var el = document.getElementById('i408');
 
 el.addEventListener('click', function(e){
     /*#i454.i455.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text= https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/?utm_source=mosaic&utm_campaign=reciclaje_marzo&utm_medium=native&utm_term=cpm'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1158,7 +1158,7 @@ var el = document.getElementById('i416');
 
 el.addEventListener('click', function(e){
     /*#i452.i453.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://twitter.com/home?status= https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/?utm_source=mosaic&utm_campaign=reciclaje_marzo&utm_medium=native&utm_term=cpm'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://twitter.com/home?status=https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1186,7 +1186,7 @@ var el = document.getElementById('i99');
 
 el.addEventListener('click', function(e){
     /*#i466.i467.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', ' https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/?utm_source=mosaic&utm_campaign=reciclaje_marzo&utm_medium=native&utm_term=cpm'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', ' https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1203,7 +1203,7 @@ var el = document.getElementById('i404');
 
 el.addEventListener('click', function(e){
     /*#i464.i465.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://www.facebook.com/sharer/sharer.php?u= https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/?utm_source=mosaic&utm_campaign=reciclaje_marzo&utm_medium=native&utm_term=cpm', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://www.facebook.com/sharer/sharer.php?u= https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje/', '_blank'));
 /*#/#*/
 });
 
@@ -1220,7 +1220,7 @@ var el = document.getElementById('i412');
 
 el.addEventListener('click', function(e){
     /*#i462.i463.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text= https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/?utm_source=mosaic&utm_campaign=reciclaje_marzo&utm_medium=native&utm_term=cpm'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1237,7 +1237,7 @@ var el = document.getElementById('i420');
 
 el.addEventListener('click', function(e){
     /*#i460.i461.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://twitter.com/home?status= https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje-capsulas/?utm_source=mosaic&utm_campaign=reciclaje_marzo&utm_medium=native&utm_term=cpm'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://twitter.com/home?status=https://www.dolce-gusto.com.mx/pages/conoceme/reciclaje/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
