--- a/NELSON VARGAS/FadeBig.html
+++ b/NELSON VARGAS/FadeBig.html
@@ -62,12 +62,12 @@
        }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/0MeuFm8.jpg");
+            background: url("https://i.imgur.com/2I4Q6JC.jpg");
             background-size: cover;
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/hheaWz3.jpg");
+            background: url("https://i.imgur.com/u9JiOCj.jpg");
             background-size: cover;
             
         }
