--- a/CapitanMorgan/ZoomExp300x600.html
+++ b/CapitanMorgan/ZoomExp300x600.html
@@ -169,7 +169,7 @@ a {text-decoration: none;}
 
 <body class="zoom" style="margin:0px;">
 
-<a href="https://www.cristal.com.pe/sm_agegate?destination=oncedelaliento" target="_blank">
+<a href="https://www.captainmorgan.com/es-mx/" target="_blank">
    
  	 <div class="wrapper size_300x250" id="cta" onclick="openUrl();">
 
@@ -211,11 +211,11 @@ a {text-decoration: none;}
                    </div>
                     <div id="botones-para-compartir" style="display:inline;float:left;margin-top:25px;margin-left:8px;"><span>
 
-                         <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/3ytstynCPLGdeS2D7"  target="block"><img alt="compartir en facebook" class="facebooki" height="23" src="https://i.imgur.com/b6cR7oL.png" title="compartir en facebook" width="23" /></a>
+                         <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.captainmorgan.com/es-mx/"  target="block"><img alt="compartir en facebook" class="facebooki" height="23" src="https://i.imgur.com/b6cR7oL.png" title="compartir en facebook" width="23" /></a>
 
-                            <a class="shared" href="whatsapp://send?text=https://goo.gl/maps/3ytstynCPLGdeS2D7" target="block"><img alt="compartir en whatsapp" class="googlei" height="23" src="https://i.imgur.com/kTLOm4q.png" title="compartir en whatsapp" width="23" /></a>
+                            <a class="shared" href="whatsapp://send?text=https://www.captainmorgan.com/es-mx/" target="block"><img alt="compartir en whatsapp" class="googlei" height="23" src="https://i.imgur.com/kTLOm4q.png" title="compartir en whatsapp" width="23" /></a>
 
-                            <a class="shared" href="https://twitter.com/home?status=https://goo.gl/maps/3ytstynCPLGdeS2D7" target="block"> <img alt="compartir en twitter" class="twitteri" height="23" src="https://i.imgur.com/rvE4mdI.png" title="compartir en twitter" width="23" /></a>
+                            <a class="shared" href="https://twitter.com/home?status=https://www.captainmorgan.com/es-mx/" target="block"> <img alt="compartir en twitter" class="twitteri" height="23" src="https://i.imgur.com/rvE4mdI.png" title="compartir en twitter" width="23" /></a>
                     </span></div>
 
          </div>
