--- a/CapitanMorgan/ZoomExp300x600.html
+++ b/CapitanMorgan/ZoomExp300x600.html
@@ -179,7 +179,7 @@ a {text-decoration: none;}
 <div class="ism-slider" data-transition_type="zoom" data-play_type="loop" data-interval="3000" data-image_fx="zoompan" data-buttons="false" data-radios="false" id="my-slider" style="width: 300px; height: 430px; border-radius: none; cursor:pointer;">
   <ol>
     <li>
-      <img src="https://i.imgur.com/3trFUfA.gif">
+      <img src="https://i.imgur.com/xt5Y26e.gif">
       
     <li>
       <img src="https://i.imgur.com/YKDeHLt.png">
