--- a/Baileys/Venetian.html
+++ b/Baileys/Venetian.html
@@ -2435,7 +2435,7 @@ var el = document.getElementById('i101');
 
 el.addEventListener('click', function(e){
     /*#i103.i104.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.facebook.com/pg/BaileysMexico/posts/?ref=page_internal'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
