--- a/CapitanMorgan/ZoomExp300x600.html
+++ b/CapitanMorgan/ZoomExp300x600.html
@@ -193,12 +193,15 @@ a {text-decoration: none;}
   
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title" style="color:#000000; font-size:28px; text-decoration: none;">¡Es hora de celebrar!</span>
+ <div class="ism_text"> <span class=" ism_text_title" style="color:#000000; font-size:23px; text-decoration: none;">¿Con Calma?, ¿Te robaré?, ¿Despacito? ¡Bailalas todas con el Capitán!
+
+
+</span>
 
     <br>
                         <span class="tgx_text_medium" style="color: black;line-height:1.1em; font-size:18px;">
                         <p style="margin-top:  2px; line-height: 1em; margin-left: -5px; ">
-                          Disfruta de los buenos momentos con tus amigos.</p>
+                         </p>
 
     
                <!--   <div class="cta" > <img src="https://i.imgur.com/pgHcgWu.png" style="height: 50px; margin-left: -35px;"></a></div>-->
