--- a/CapitanMorgan/ZoomExp300x600.html
+++ b/CapitanMorgan/ZoomExp300x600.html
@@ -193,7 +193,7 @@ a {text-decoration: none;}
   
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title" style="color:#000000; font-size:23px; text-decoration: none;">¿Con Calma?, ¿Te robaré?, ¿Despacito? ¡Bailalas todas con el Capitán!
+ <div class="ism_text"> <span class=" ism_text_title" style="color:#000000; font-size:23px; text-decoration: none;">¿Con Calma?, ¿Te robaré?, ¿Despacito? <br> ¡Bailalas todas con el Capitán!
 
 
 </span>
@@ -208,7 +208,7 @@ a {text-decoration: none;}
 
      </span>
                    </div>
-                     <div style=";height:5px;text-align:right ;margin-top:29px; margin-right: 5px;"> <img src="https://i.imgur.com/sfeqYNY.png" style="height:55px; text-decoration: none;">
+                     <div style=";height:5px;text-align:right ;margin-top:2px; margin-right: 5px;"> <img src="https://i.imgur.com/sfeqYNY.png" style="height:55px; text-decoration: none;">
 
                                        
                    </div>
