--- a/CapitanMorgan/ZoomExp300x600.html
+++ b/CapitanMorgan/ZoomExp300x600.html
@@ -193,7 +193,7 @@ a {text-decoration: none;}
   
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title" style="color:#000000; font-size:23px; text-decoration: none;">¿Con Calma?, ¿Te robaré?, ¿Despacito? <br> ¡Bailalas todas con el Capitán!
+ <div class="ism_text"> <span class=" ism_text_title" style="color:#000000; font-size:23px; text-decoration: none;">¿Con Calma?, ¿Te robaré?, ¿Despacito? <br> ¡Bailalas todas con <br>el Capitán!
 
 
 </span>
