--- a/Kleber/Fijo300x250.html
+++ b/Kleber/Fijo300x250.html
@@ -216,7 +216,7 @@
 </head>
 <body class="AmericanFijo" style="margin:0px;">
 	 <div class="te-container">
-        <a href="http://blog.bricodepot.es/paso-a-paso-instalar-cesped-artificial/?utm_source=xaxis&utm_medium=display&utm_campaign=BlogMayo2019&utm_content=cesped_artificial" target="_blank">
+        <a href="https://bs.serving-sys.com/serving/adServer.bs?cn=trd&mc=click&pli=28443519&PluID=0&ord=[timestamp]" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
                
                <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:70%; color: white;"></span></div>
