--- a/Chicco Hot Sale/Venetian320x480.html
+++ b/Chicco Hot Sale/Venetian320x480.html
@@ -2419,7 +2419,7 @@ var el = document.getElementById('i40');
 
 el.addEventListener('click', function(e){
     /*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado https://www.amazon.com.mx/stores/page/E324C0A8-954A-44A5-9EC2-10934DC57F35?utm_source=display&utm_medium=mosaic&utm_content=teaser&utm_campaign=1905-chicco-hs'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2436,7 +2436,7 @@ var el = document.getElementById('i42');
 
 el.addEventListener('click', function(e){
     /*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://twitter.com/home?status=https://www.amazon.com.mx/stores/page/E324C0A8-954A-44A5-9EC2-10934DC57F35?utm_source=display&utm_medium=mosaic&utm_content=teaser&utm_campaign=1905-chicco-hs'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
