--- a/Chicco Hot Sale/fijo-gif.html
+++ b/Chicco Hot Sale/fijo-gif.html
@@ -231,7 +231,7 @@
         <a href="https://www.walmart.com.mx/productos?Ntt=chicco&No=0?utm_source=display&utm_medium=mosaic&utm_content=teaser&utm_campaign=1905-chicco-hs" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
 
-            <div class="cta"> <a href="http://www.victoriassecret.mx/storeLocator.php" target="_blank">
+            <div class="cta"> <a href="https://www.walmart.com.mx/productos?Ntt=chicco&No=0?utm_source=display&utm_medium=mosaic&utm_content=teaser&utm_campaign=1905-chicco-hs" target="_blank">
     <img src="https://i.imgur.com/i4PQ41e.png" style="height: 37px;"></a></div> 
 
                 <div class="te-images"> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> </div>
