--- a/ConforAuto/Venetian300x600.html
+++ b/ConforAuto/Venetian300x600.html
@@ -2201,22 +2201,22 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(182px, 549px) rotate(0deg);
 }
 /*#/#*//*#i7.text.css:text/base/css*/
-#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 20px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 16px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
-#i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 277px; height: 74px;
-        -ms-transform: translate(0, 0) translate(11px, 481px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(11px, 481px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(11px, 481px) rotate(0deg);
-        transform: translate(0, 0) translate(11px, 481px) rotate(0deg);
+#i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 249px; height: 100px;
+        -ms-transform: translate(0, 0) translate(26px, 467px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(26px, 467px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(26px, 467px) rotate(0deg);
+        transform: translate(0, 0) translate(26px, 467px) rotate(0deg);
 }
 /*#/#*//*#i32.text.css:text/base/css*/
 #i32 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 26px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i32.i33.positioning.css:positioning/base/css.2*/
 #i32 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 238px; height: 74px;
-        -ms-transform: translate(0, 0) translate(31px, 420px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(31px, 420px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(31px, 420px) rotate(0deg);
-        transform: translate(0, 0) translate(31px, 420px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(31px, 412px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(31px, 412px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(31px, 412px) rotate(0deg);
+        transform: translate(0, 0) translate(31px, 412px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2256,7 +2256,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/bPDeuYO.png"/>
 <!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">Goodyear es la mejor elección para tu coche y la puedes encontrar en Confortauto.</div>
+<div id="i7">Goodyear es la mejor elección para tu coche y la puedes encontrar en Confortauto. Elige lo mejor con la profesionalidad de los talleres Confortauto.</div>
 <!--#/#--><!--#i32.text.html:text/html-->
 <div id="i32">La mejor elección 
 de neumáticos</div>
@@ -2366,7 +2366,7 @@ customName: false;
 /*#/#*//*#i16.i17.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i7.text.meta:text/meta*/
-name: Goodyear es la mejor elección para tu coche y la puedes encontrar en Confortauto.; customName: false;
+name: Goodyear es la mejor elección para tu coche y la puedes encontrar en Confortauto. Elige lo mejor con la profesionalidad de los talleres Confortauto.; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i32.text.meta:text/meta*/
