--- a/Cristal AsientoLibre/videobig.html
+++ b/Cristal AsientoLibre/videobig.html
@@ -290,7 +290,7 @@
 
             <a href= "https://www.cristal.com.pe/" target="_blank">
         <div class="carousel-container">
-            <div id="ytplayer" onmouseenter="SetYoutubeVolume(true)" onmouseleave="SetYoutubeVolume(false)" style="margin-left: -251px; margin-top: -30px;">
+            <div id="ytplayer" onmouseenter="SetYoutubeVolume(true)" onmouseleave="SetYoutubeVolume(true)" style="margin-left: -251px; margin-top: -30px;">
            
             </div>
         </div>
@@ -325,7 +325,7 @@
                 if (pakata == true){
                     ytplayer.setVolume(80);
                 }else{
-                    ytplayer.setVolume(0);
+                    ytplayer.setVolume(80);
                 }
             }
  
