--- a/BCP Millas que vuelan/INTERNACIONAL_300x250_FIJO.html
+++ b/BCP Millas que vuelan/INTERNACIONAL_300x250_FIJO.html
@@ -204,7 +204,7 @@
 
                 
                 <div class="te-images"> 
-                <img src="https://i.imgur.com/mdhD0fi.jpg" alt="" /> 
+                <img src="https://i.imgur.com/5tNqpTs.jpg" alt="" /> 
                  </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
