--- a/BCP Millas que vuelan/NACIONAL_300x600_FIJO.html
+++ b/BCP Millas que vuelan/NACIONAL_300x600_FIJO.html
@@ -203,7 +203,7 @@
 
             <div id="te-wrapper" class="te-wrapper">
                 <div class="te-images"> 
-                <img src="https://i.imgur.com/yEZlRQY.jpg" alt="" /> 
+                <img src="https://i.imgur.com/oSwUAlW.jpg" alt="" /> 
                  </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
