--- a/Panamericana Maestria/formulario-def.html
+++ b/Panamericana Maestria/formulario-def.html
@@ -659,7 +659,7 @@ AVISO DE PRIVACIDAD</a></label>
             <div class="FR red">
                 <center>
                 <span class="s-I" style="width: 320px; margin-left: -30px;"> 
-                    <img src="https://i.imgur.com/WxyGj1j.png" style="height:240px;  text-decoration: none; border-radius:0px;
+                    <img src="https://i.imgur.com/WxyGj1j.png" style="height:240px; width: 310px;  text-decoration: none; border-radius:0px;
     box-shadow:0 0 0px 0px #fff; margin-top: 0px;"></span>
 
                 <span class="s-II bzm_text_title  bzm_text_medium" style="margin-top: 50px;">
