--- a/Chicco Hot Sale/pequeno.html
+++ b/Chicco Hot Sale/pequeno.html
@@ -69,7 +69,7 @@
 
         .bg.cover-1 {
             
-            background: url("https://i.imgur.com/YNeXdge.gif");
+            background: url("https://i.imgur.com/8UWmqVM.gif");
             background-size: cover;
         
         }
