--- a/Chicco Hot Sale/Venetian320x480.html
+++ b/Chicco Hot Sale/Venetian320x480.html
@@ -2237,7 +2237,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(92px, 330px) rotate(0deg);
 }
 /*#/#*//*#i50.text.css:text/base/css*/
-#i50 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 24px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i50 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 21px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i50.i51.positioning.css:positioning/base/css.2*/
 #i50 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 260px; height: 60px;
         -ms-transform: translate(0, 0) translate(35px, 380px) rotate(0deg);
@@ -2279,7 +2279,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i48.image.html:image/html-->
 <img id="i48" src="https://i.imgur.com/i4PQ41e.png"/>
 <!--#/#--><!--#i50.text.html:text/html-->
-<div id="i50">Grandes descuentos te esperan, descúbrelos.</div>
+<div id="i50">Consiente a tu bebé con hasta 40% de descuento.</div>
 <!--#/#--><!--#i26.button.html:button/html-->
 <button id="i26"></button>
 <!--#/#--><!--#/#--><!--#js:common/js-->
