--- a/Chicco Hot Sale/fijo-gif.html
+++ b/Chicco Hot Sale/fijo-gif.html
@@ -244,7 +244,7 @@
                 <div style="margin-top:21px; margin-left: 10px; margin-right: 10px;">
                     <div class="bzm_text">
                         <span class="bzm_text_title  bzm_text_bold" style="float:left; color:#2d363b;line-height:1.1; font-size:21px;">
-						    Grandes descuentos te esperan, descúbrelos.
+						    Consiente a tu bebé con hasta 40% de descuento.
 						</span>
                        
                       
