--- a/Chicco Hot Sale/fijo-gif.html
+++ b/Chicco Hot Sale/fijo-gif.html
@@ -236,7 +236,7 @@
     <img src="https://i.imgur.com/i4PQ41e.png" style="height: 37px;"></a></div> 
 
                 <div class="te-images"> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> </div>
-                <div class="te-cover"> <img src="https://i.imgur.com/McsEEUh.gif" alt="" /> </div>
+                <div class="te-cover"> <img src="https://i.imgur.com/WTnfCsC.gif" alt="" /> </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
                     <div class="te-back"></div>
